k8s/applications/tdarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tdarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: tdarr-server
          image: haveagitgat/tdarr:2.77.01
          ports:
            - name: ingress
              containerPort: 8265
          volumeMounts:
            - name: tdarr
              mountPath: /app/server
              subPath: server
            - name: tdarr
              mountPath: /app/configs
              subPath: configs
            - name: applications
              mountPath: /temp
              subPath: tdarr
            - name: libraries
              mountPath: /media/movies
              subPath: movies/sd
            - name: libraries
              mountPath: /media/movies-uhd
              subPath: movies/uhd
            - name: libraries
              mountPath: /media/movies-requested
              subPath: movies/requested
            - name: libraries
              mountPath: /media/tv
              subPath: tv/sd
            - name: libraries
              mountPath: /media/tv-uhd
              subPath: tv/uhd
            - name: libraries
              mountPath: /media/tv-requested
              subPath: tv/requested
        - name: tdarr-node
          image: haveagitgat/tdarr_node:2.77.01
          volumeMounts:
            - name: tdarr
              mountPath: /app/configs
              subPath: configs
            - name: applications
              mountPath: /temp
              subPath: tdarr
            - name: libraries
              mountPath: /media/movies
              subPath: movies/sd
            - name: libraries
              mountPath: /media/movies-uhd
              subPath: movies/uhd
            - name: libraries
              mountPath: /media/movies-requested
              subPath: movies/requested
            - name: libraries
              mountPath: /media/tv
              subPath: tv/sd
            - name: libraries
              mountPath: /media/tv-uhd
              subPath: tv/uhd
            - name: libraries
              mountPath: /media/tv-requested
              subPath: tv/requested
      volumes:
        - name: tdarr
          persistentVolumeClaim:
            claimName: tdarr
        - name: applications
          persistentVolumeClaim:
            claimName: applications
        - name: libraries
          persistentVolumeClaim:
            claimName: libraries
      resources:
        limits:
          memory: 1Gi
        requests:
          cpu: 10m
          memory: 1Gi
