k8s/applications/tdarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdarr
spec:
  type: ClusterIP
  ports:
    - name: tdarr
      port: 8265
      targetPort: tdarr
